--- a/src/styles/app-style.css
+++ b/src/styles/app-style.css
@@ -21,7 +21,7 @@ div[data-v-app] > div.v-application {
   top: 0;
   left: 0;
   transition-duration: calc(var(--transition-duration) * 3 / 2) !important;
-  background: url("../assets/background.webp");
+  background: url('../assets/background.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center bottom;
